[workspace]
members = [
    "crates/builder",
    "crates/launcher",
    "crates/mac-launcher",
    "crates/shared",
    "crates/mldsa-verify",
    "crates/script-tester",
    "crates/gui",
    "crates/rdp/rdp",
    "crates/rdp/freerdp-sys",
    "crates/gui-tester",
    "crates/js",
    "crates/audio",
]
resolver = "3"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4.42" }
directories-next = "2.0.0"
hostname = "0.4.2"

# randomness
rand = "0.9.2"

# Concurrency channels and utilities
crossbeam = "0.8.4"

# SSL/TLS
rustls = "0.23.35"
rustls-native-certs = "0.8.2"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.48", features = [
    "net",
    "io-util",
    "rt",
    "sync",
    "macros",
    "time",
    "process",
] }
futures = "0.3.31"
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.12.24", features = [
    "json",
    "rustls-tls",
    "system-proxy",
] }

# Json handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard handling
clipboard-rs = "0.3.1"

# Encoding/Decoding
base64 = "0.22.1"
bzip2 = "0.6.1"

# Multilingual support
gettext = "0.4.0"

# Graphics/UI
eframe = { version = "0.33.2", features = ["glow"] }
image = { version = "0.25.8", features = ["png"] }
winit = { version = "0.30.12" }

# For opening links
open = "5.3"

# regex
regex = "1.12.2"

# JavaScript engine
boa_engine = { version = "0.21.0" }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

# Devel and testing
rcgen = "0.14.6"
serial_test = "3.2"
mockito = "1.7"


# Windows
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
] }
widestring = { version = "1.2" }
