[workspace]
members = [
    "crates/builder",
    "crates/launcher",
    "crates/mac-launcher",
    "crates/shared",
    "crates/crypt",
    "crates/script-tester",
    "crates/gui",
    "crates/rdp/rdp",
    "crates/rdp/freerdp-sys",
    "crates/gui-tester",
    "crates/js",
    "crates/audio",
]
resolver = "3"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4.42" }
directories-next = "2.0.0"
hostname = "0.4.2"
is_executable = "1.0.5"

# randomness
rand = "0.9.2"

# Concurrency channels and utilities
crossbeam = "0.8.4"

# SSL/TLS
rustls = "0.23.36"
rustls-native-certs = "0.8.3"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.49.0", features = [
    "net",
    "io-util",
    "rt",
    "sync",
    "macros",
    "time",
    "process",
] }
futures = "0.3.31"
async-trait = "0.1.89"

# HTTP client
reqwest = { version = "0.13.1", features = ["json", "rustls", "system-proxy"] }

# Json handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard handling
clipboard-rs = "0.3.1"

# Encoding/Decoding
base64 = "0.22.1"
bzip2 = "0.6.1"

# i18n
gettext = "0.4.0"
rust-embed = "8.9.0"
sys-locale = "0.3.2"

# Graphics/UI
eframe = { version = "0.33.2", features = ["glow"] }
image = { version = "0.25.8", features = ["png"] }
winit = { version = "0.30.12" }

# Sound
cpal = "0.17.1"

# For opening links
open = "5.3"

# Post-quantum cryptography
libcrux-ml-dsa = "0.0.5"
libcrux-ml-kem = "0.0.5"

# key derivation
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10.3"

# regex
regex = "1.12.2"

# JavaScript engine
boa_engine = { version = "0.21.0" }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2.0"

# Testing
rcgen = "0.14.7"
serial_test = "3.3"
mockito = "1.7"

# Building
bindgen = "0.72"
cc = "1.2"
winres = "0.1.12"
glob = "0.3.3"

# Linux/macos
libc = "0.2.180"

# Windows
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
] }
widestring = { version = "1.2" }

# MacOS
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
