[workspace]
members = [
    "crates/builder",
    "crates/launcher",
    "crates/mac-launcher",
    "crates/shared",
    "crates/crypt",
    "crates/script-tester",
    "crates/gui",
    "crates/rdp/rdp",
    "crates/rdp/freerdp-sys",
    "crates/gui-tester",
    "crates/js",
    "crates/multimedia",
    "crates/connection",
]
resolver = "3"

[workspace.package]
version = "5.0.0"
edition = "2024"
authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"


[workspace.dependencies]
# Utilities
anyhow = "1.0"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }
chrono = { version = "0.4" }
directories-next = "2.0"
hostname = "0.4"
is_executable = "1.0"
num_enum = "0.7"

# randomness
rand = "0.10"

# Concurrency channels and utilities
flume = { version = "0.12", features = ["async"] }


# SSL/TLS
rustls = "0.23"
rustls-native-certs = "0.8"

# async & async TLS
tokio-rustls = "0.26.4"
tokio = { version = "1.50", features = [
    "net",
    "io-util",
    "rt",
    "sync",
    "macros",
    "time",
    "process",
] }

futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls", "system-proxy"] }

# Json handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard handling
clipboard-rs = "0.3"

# Encoding/Decoding
base64 = "0.22.1"
bzip2 = "0.6.1"

# i18n
gettext = "0.4.0"
rust-embed = "8.11"
sys-locale = "0.3.2"

# Graphics/UI
eframe = { version = "0.34.1", features = ["glow", "wgpu"] }
image = { version = "0.25.10", features = ["png"] }
winit = { version = "0.30.13" }

# Sound
cpal = "0.17.2"

# For opening links
open = "5.3"

# Post-quantum cryptography
libcrux-ml-dsa = "0.0.8"
libcrux-ml-kem = "0.0.8"

# key derivation
hkdf = "0.13"
sha2 = "0.11"
aes-gcm = "0.10"

# regex
regex = "1.12"

# JavaScript engine
boa_engine = { version = "0.21" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
tracing-log = "0.2"

# Testing
rcgen = "0.14"
serial_test = "3.3"
mockito = "1.7"

# Building
bindgen = "0.72"
cc = "1.2"
winres = "0.1"
glob = "0.3"

# Linux/macos
libc = "0.2"

# Windows
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security_Cryptography",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
] }
widestring = { version = "1.2" }

# MacOS
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
