[package]
name = "connection"
version = "5.0.0"
edition = "2024"

[dependencies]
crypt = { path = "../crypt" }
shared = { path = "../shared" }

# Utility
anyhow = { workspace = true }
chrono = { workspace = true }
directories-next = { workspace = true }
hostname = { workspace = true }
num_enum = { workspace = true }


# Encoding/Decoding
base64 = { workspace = true }
bzip2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

rand = { workspace = true }

# SSL/TLS
rustls = { workspace = true }
rustls-native-certs = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# channels and internal communication
flume = { workspace = true }


# non blocking TLS streams
tokio-rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
widestring = { workspace = true }


[dev-dependencies]
rcgen = { workspace = true }
serial_test = { workspace = true }
mockito = { workspace = true }
