[package]
name = "crypt"
version = "5.0.0"
edition = "2024"

[dependencies]
# Cryptography libraries
libcrux-ml-dsa = { workspace = true }
libcrux-ml-kem = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }

# Randomness
rand = { workspace = true }

base64 = { workspace = true }
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
