[package]
name = "gui-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
gui = { path = "../gui", features = ["test-ui"] }
rdp = { path = "../rdp/rdp", package = "rdp" }

anyhow.workspace = true

gettext.workspace = true
flume.workspace = true
