[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
connection = { path = "../connection" }
rdp_ffi = { path = "../rdp/rdp", package = "rdp" }

anyhow.workspace = true

flume.workspace = true
tokio.workspace = true

winit.workspace = true

wgpu.workspace = true
pollster.workspace = true
bytemuck = { version = "1", features = ["derive"] }
wgpu_text.workspace = true

zeroize.workspace = true
image.workspace = true

open.workspace = true

serde.workspace = true
serde_json.workspace = true
interprocess = "2"

gettext.workspace = true
