[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
connection = { path = "../connection" }
rdp_ffi = { path = "../rdp/rdp", package = "rdp" }

anyhow.workspace = true

flume.workspace = true
tokio.workspace = true

winit.workspace = true

wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
wgpu_text.workspace = true

zeroize.workspace = true
image.workspace = true

open.workspace = true

serde.workspace = true
serde_json.workspace = true
interprocess.workspace = true

tiny-skia.workspace = true

gettext.workspace = true
