[package]
name = "js"
version = "5.0.0"
edition = "2024"

[dependencies]
rdp = { path = "../rdp/rdp" }
shared = { path = "../shared" }
connection = { path = "../connection" }
gui = { path = "../gui" }
crypt = { path = "../crypt" }

# JavaScript engine
boa_engine = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

anyhow = { workspace = true }
rand = { workspace = true }

# For checking if a file is executable
is_executable = { workspace = true }

# For connecting to egui
crossbeam = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
serial_test = { workspace = true }
