[package]
name = "js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rdp = { path = "../rdp/rdp" }
shared = { path = "../shared" }
connection = { path = "../connection" }
gui = { path = "../gui" }
crypt = { path = "../crypt" }

# JavaScript engine
boa_engine.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
regex.workspace = true

reqwest.workspace = true

anyhow.workspace = true
rand.workspace = true

# For checking if a file is executable
is_executable.workspace = true

# For connecting to egui
flume.workspace = true

[dev-dependencies]
base64.workspace = true
serial_test.workspace = true
