[package]
name = "launcher"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
js = { path = "../js" }
gui = { path = "../gui" }
rdp = { path = "../rdp/rdp" }


anyhow = { workspace = true }

tokio = { workspace = true }

eframe = { workspace = true }
image = { workspace = true }
open = "5.3.2"

# Persistence
serde = { workspace = true }
serde_json = { workspace = true }

# i18n
gettext = { workspace = true }
rust-embed = "8.9.0"
sys-locale = "0.3.2"

crossbeam = { workspace = true }

[build-dependencies]
builder = { path = "../builder" }
