[package]
name = "launcher"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
js = { path = "../js" }
gui = { path = "../gui" }
rdp = { path = "../rdp/rdp" }


anyhow = { workspace = true }

tokio = { workspace = true }

eframe = { workspace = true }
image = { workspace = true }
open = { workspace = true }

# Persistence
serde = { workspace = true }
serde_json = { workspace = true }

# i18n
gettext = { workspace = true }
rust-embed = { workspace = true }
sys-locale = { workspace = true }

crossbeam = { workspace = true }

[build-dependencies]
builder = { path = "../builder" }
