[package]
name = "mac-launcher"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
shared = { path = "../shared" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true}
objc2-foundation = { workspace = true}
objc2-app-kit = { workspace = true}