[package]
name = "script-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
js = { path = "../js" }
rdp = { path = "../rdp/rdp" }
gui = { path = "../gui" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1.48.0", features = ["io-util", "rt", "sync", "macros"] }
anyhow = "1.0.100"

base64 = "0.22.1"
bzip2 = "0.6.1"

crossbeam = "0.8.4"
gettext = "0.4.0"
