[package]
name = "script-tester"
version = "5.0.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
js = { path = "../js" }
rdp = { path = "../rdp/rdp" }
gui = { path = "../gui" }

serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }

base64 = { workspace = true }
bzip2 = { workspace = true }

crossbeam = { workspace = true }
gettext = { workspace = true }
