[package]
name = "script-tester"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
js = { path = "../js" }
rdp = { path = "../rdp/rdp" }
gui = { path = "../gui" }
connection = { path = "../connection" }

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
anyhow.workspace = true

base64.workspace = true
bzip2.workspace = true

flume.workspace = true
gettext.workspace = true
