[package]
name = "shared"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# Utility
anyhow = { workspace = true }
chrono = { workspace = true }
directories-next = { workspace = true }
hostname = { workspace = true }
num_enum = { workspace = true }


# Encoding/Decoding
base64 = { workspace = true }
bzip2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

rand = { workspace = true }

# SSL/TLS
rustls = { workspace = true }
rustls-native-certs = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

# channels and internal communication
flume = { workspace = true }


# non blocking TLS streams
tokio-rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
widestring = { workspace = true }

# On a separate crate due to the dependency on the ML DSA crate
# which is not needed elsewhere
[dependencies.crypt]
path = "../crypt"

[dev-dependencies]
rcgen = { workspace = true }
serial_test = { workspace = true }
mockito = { workspace = true }
