[package]
name = "shared"
version = "5.0.0"
edition = "2024"

authors = ["Adolfo Gómez <dkmaster@dkmon.com>"]
license = "BSD-3-Clause"

[dependencies]
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# Utility
anyhow = { workspace = true }
chrono = { workspace = true }
directories-next = { workspace = true }
hostname = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

rand = { workspace = true }

# SSL/TLS
rustls = { workspace = true }
rustls-native-certs = { workspace = true }

# non blocking TLS streams
tokio-rustls = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
widestring = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
serial_test = { workspace = true }
mockito = { workspace = true }
