[package]
name = "rdp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
freerdp-sys = { path = "../freerdp-sys" }
shared = { path = "../../shared" }

anyhow.workspace = true

flume.workspace = true

# Security dependencies
zeroize.workspace = true

# Clipboard dependencies

# Windows dependencies
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[build-dependencies]
glob.workspace = true